--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,37 @@
 {% block content %}
     <h1>Get started</h1>
 
-    <form>
+    <form action="{{ url_for('index') }}" method="post">
         <div>
-            {{ form.username(placeholder='User name') }}
-            {{ form.password(placeholder='Password') }}
+            {{ form.username(class_='form-control', placeholder='User name',
+                    autocomplete='off',autofocus=true) }}
+            <ul>
+                {% for error in form.username.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
         </div>
+        <div>
+            {{ form.password(placeholder='Password',class_='form-control') }}
+            <ul>
+                {% for error in form.password.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            {{ form.confirm_pswd(placeholder='Confirm Password',class_='form-control') }}
+            <ul>
+                {% for error in form.confirm_pswd.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div>
+            {{ form.submit_button }}
+        </div>
+
+        {{ form.csrf_token }}
+
     </form>
 {% endblock %}
