--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'prelogin-layout.html' %}
+{% from 'form_helper.html' import displayField %}
 
 {% block title %}Registration {% endblock %}
 
@@ -6,31 +7,10 @@
     <h1>Get started</h1>
 
     <form action="{{ url_for('index') }}" method="post">
-        <div>
-            {{ form.username(class_='form-control', placeholder='User name',
-                    autocomplete='off',autofocus=true) }}
-            <ul>
-                {% for error in form.username.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div>
-            {{ form.password(placeholder='Password',class_='form-control') }}
-            <ul>
-                {% for error in form.password.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div>
-            {{ form.confirm_pswd(placeholder='Confirm Password',class_='form-control') }}
-            <ul>
-                {% for error in form.confirm_pswd.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-        </div>
+
+        {{ displayField(form.username, 'User name', autocomplete='off',autofocus=true) }}
+        {{ displayField(form.password, 'Password') }}
+        {{ displayField(form.confirm_pswd, 'Confirm Password') }}
         <div>
             {{ form.submit_button }}
         </div>
