--- a/templates/prelogin-layout.html
+++ b/templates/prelogin-layout.html
@@ -5,7 +5,14 @@
         <title>{% block title %}{% endblock %} - Chat</title>
     </head>
     <body>
+        <!-- Flash messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {{ messages[0][1] }}
+            {% endif %}
+        {% endwith %}
         {% block content %}
+
         {% endblock %}
     </body>
 </html>
