--- a/templates/chat.html
+++ b/templates/chat.html
@@ -30,6 +30,11 @@
 
         </div>
 
+        <!-- Get username -->
+        <script type="text/javascript">
+            const username = `{{ username }}`;
+        </script>
+
         <!-- SocketIO JS -->
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 
