--- a/templates/chat.html
+++ b/templates/chat.html
@@ -40,6 +40,9 @@
             const username = `{{ username }}`;
         </script>
 
+        <!-- Custom chat JS -->
+        <script src="{{ url_for('static', filename='scripts/chat_page.js') }}" charset="utf-8"></script>
+        
         <!-- SocketIO JS -->
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 
