--- a/templates/prelogin-layout.html
+++ b/templates/prelogin-layout.html
@@ -26,7 +26,7 @@
             <!-- Demo image start -->
             <div id="image-section">
                 <picture>
-                    <div style="width:100%;height:0;padding-bottom:75%;position:relative;"><iframe src="https://giphy.com/embed/26FPJGjhefSJuaRhu" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/chat-conversation-gifathon-26FPJGjhefSJuaRhu"></a></p>
+                    <iframe src="https://giphy.com/embed/26FPJGjhefSJuaRhu" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/chat-conversation-gifathon-26FPJGjhefSJuaRhu"></a></p>
                 </picture>
             </div>
             <!-- Demo image end -->
