Update the photo

--- a/templates/prelogin-layout.html
+++ b/templates/prelogin-layout.html
@@ -26,7 +26,7 @@
             <!-- Demo image start -->
             <div id="image-section">
                 <picture>
-                    <iframe src="https://giphy.com/embed/26FPJGjhefSJuaRhu" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/chat-conversation-gifathon-26FPJGjhefSJuaRhu"></a></p>
+                    <img class="card" src="{{ url_for('static', filename='images/Chatrooms.png') }}" border="5px">
                 </picture>
             </div>
             <!-- Demo image end -->
