--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,14 @@
         {{ displayField(form.username, 'User name', autocomplete='off',autofocus=true) }}
         {{ displayField(form.password, 'Password') }}
         {{ displayField(form.confirm_pswd, 'Confirm Password') }}
-        <div>
-            {{ form.submit_button }}
+        <div class="form-group">
+            <input type="submit" value="Create" class="btn btn-warning">
         </div>
 
         {{ form.csrf_token }}
 
     </form>
+
+    <p>Already registered? <a href="{{url_for('login')}}">Login here</a>.</p>
+
 {% endblock %}
