--- a/templates/chat.html
+++ b/templates/chat.html
@@ -42,8 +42,6 @@
                         {% for room in rooms %}
                             <p class="select-room">{{ room|title }}</p>
                         {% endfor %}
-
-
                 </nav>
                 <!-- Message area -->
                 <div id="rightside-pannel">
@@ -51,11 +49,16 @@
                     <div id="display-message-section">
 
                     </div>
-                    <!-- Input message -->
-                    <div id="input-area">
-                        <input type="text" id="user_message" placeholder="Type here...">
-                        <button type="button" id="send_message">SEND</button>
+                    <!-- Display message end -->
+
+                    <!-- Type message start -->
+                   <div id="input-area" class="input-group mb-3">
+                        <input type="text" id="user_message" class="form-control" placeholder="Type here..." aria-label="Type a message" aria-describedby="basic-addon2" autocomplete="off">
+                        <div class="input-group-append">
+                            <button id="send_message" class="btn btn-warning" type="button">SEND <i class="fas fa-paper-plane"></i></button>
+                        </div>
                     </div>
+                    <!-- Type message end -->
                 </div>
 
             </div>
