Added a button to create a room

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -42,6 +42,7 @@
                         {% for room in rooms %}
                             <p class="select-room">{{ room|title }}</p>
                         {% endfor %}
+                    <a id="create-room" href="#" class="btn btn-primary">Create Room</a>
                 </nav>
                 <!-- Message area -->
                 <div id="rightside-pannel">
