--- a/templates/chat.html
+++ b/templates/chat.html
@@ -71,7 +71,7 @@
         <script type="text/javascript">
             const username = `{{ username }}`;
         </script>
-
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <!-- Custom chat JS -->
         <script src="{{ url_for('static', filename='scripts/chat_page.js') }}" charset="utf-8"></script>
 
