--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,32 @@
-{% extends 'prelogin-layout.html' %}
-{% from 'form_helper.html' import displayField %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% block title %}Login {% endblock %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-{% block content %}
-    <h2>Login now!</h2>
-    <p>Enter your username/password to start</p>
+    <title>Chat - Login</title>
+  </head>
+  <body>
+      <div  class="container">
+          <h2>Login now!</h2>
+          <p>Enter your username to start</p>
 
-    <form action="{{ url_for('login') }}" method="post">
+          <form action="{{ url_for('login') }}" method="post">
+              <div class="form-group">
+                  <input type="text"  class="form-control" name="username" value="" placeholder="Please enter your username">
+              </div>
+              <input type="submit" value="Login" class="btn btn-warning">
+          </form>
+      </div>
 
-        {{ displayField(form.username, 'User name', autocomplete='off',autofocus=true) }}
-        {{ displayField(form.password, 'Password') }}
-
-        <div class="form-group">
-            <input type="submit" value="Login" class="btn btn-warning">
-        </div>
-
-        {{ form.csrf_token }}
-
-    </form>
-
-    <p>Have not registered? <a href="{{url_for('index')}}">Register here</a>.</p>
-
-{% endblock %}
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
+</html>
