--- a/templates/chat.html
+++ b/templates/chat.html
@@ -45,7 +45,7 @@
                         <div id="rooms">
                             {% if ROOMS %}
                                 {% for room in ROOMS %}
-                                    <p class="select-room">{{ room }}</p>
+                                    <p class="select-room">{{ room.name }}</p>
                                 {% endfor %}
                             {% else %}
                                 <p>Please create a room to start chatting</p>
