--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,25 @@
 {% extends 'prelogin-layout.html' %}
 {% from 'form_helper.html' import displayField %}
 
-{% block title %}Registration {% endblock %}
+{% block title %}Login {% endblock %}
 
 {% block content %}
-    <h1>Get started</h1>
+    <h2>Login now!</h2>
+    <p>Enter your username/password to start</p>
 
-    <form action="{{ url_for('index') }}" method="post">
+    <form action="{{ url_for('login') }}" method="post">
 
         {{ displayField(form.username, 'User name', autocomplete='off',autofocus=true) }}
         {{ displayField(form.password, 'Password') }}
-        {{ displayField(form.confirm_pswd, 'Confirm Password') }}
+
         <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-warning">
+            <input type="submit" value="Login" class="btn btn-warning">
         </div>
 
         {{ form.csrf_token }}
 
     </form>
 
-    <p>Already registered? <a href="{{url_for('login')}}">Login here</a>.</p>
+    <p>Have not registered? <a href="{{url_for('index')}}">Register here</a>.</p>
 
 {% endblock %}
