Set the display of p elemnt that saying create room to be none, once the room created

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -48,7 +48,7 @@
                                     <p class="select-room">{{ room }}</p>
                                 {% endfor %}
                             {% else %}
-                                <p>Please create a room to start chatting</p>
+                                <p id="no-rooms">Please create a room to start chatting</p>
                             {% endif %}
                         </div>
                     <a id="create-room" href="#" class="btn btn-primary">Create Room</a>
